--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -6,7 +6,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
+  .search{
+    border-radius: 10px;
+    border: none;
+    width: 50%;
+    text-align: center;
+    padding: 0 5px;
+  }
   .logo {
     display: flex;
     align-items: center;
@@ -17,7 +23,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-
+    
     .icon{
       @include sm{
         display: none;
