--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -5,11 +5,14 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  height: 85vh;
   .item {
     display: flex;
     flex-direction: column;
+    height: 100%;
     gap: 10px;
     margin-bottom: 20px;
+    justify-content: space-around;
 
     .title {
       font-size: 12px;
@@ -17,7 +20,7 @@
       color: $soft-color;
       text-transform: uppercase;
 
-      @include lg{
+      @include lg {
         display: none;
       }
     }
@@ -33,8 +36,8 @@
         background-color: $soft-bg;
       }
 
-      .listItemTitle{
-        @include lg{
+      .listItemTitle {
+        @include lg {
           display: none;
         }
       }
