--- a/src/pages/Locations/locations.scss
+++ b/src/pages/Locations/locations.scss
@@ -1,12 +1,12 @@
-.users {
-  .info {
+.users{
+
+  .info{
     display: flex;
     align-items: center;
-    justify-content: space-between;
-
+    gap: 20px;
     margin-bottom: 20px;
 
-    button {
+    button{
       padding: 5px;
       cursor: pointer;
     }
