--- a/src/components/add/add.scss
+++ b/src/components/add/add.scss
@@ -37,7 +37,7 @@
       justify-content: space-between;
 
       .item {
-        width: 40%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         gap: 10px;
@@ -47,7 +47,8 @@
           font-size: 14px;
         }
 
-        input {
+        input,
+        select {
           padding: 10px;
           background-color: transparent;
           color: white;
