--- a/src/components/add/add.scss
+++ b/src/components/add/add.scss
@@ -56,6 +56,9 @@
           border: 1px solid $soft-color;
           border-radius: 3px;
         }
+        option {
+          color: black;
+        }
       }
       button {
         width: 100%;
